# music-device-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md  flash-spiffs.bash  partitions.csv  sdkconfig
components/a2dp_source/: a2dp_driver.c  a2dp_source.c
components/audio-kit/: CMakeLists.txt  adapter.c
components/audio-kit/include/: audio_mutex.h
components/cpp_utils/: BLEDevice.cpp  CMakeLists.txt  FreeRTOS.cpp  FreeRTOS.h
components/eli/: CMakeLists.txt  eli_ili9341_xpt2046.c
components/esp_a2dp/: CMakeLists.txt  ysw_a2dp_driver.c  ysw_a2dp_source.c
components/esp_a2dp/include/: ysw_a2dp_driver.h  ysw_a2dp_source.h
components/fluidsynth/: CMakeLists.txt  component.mk  config.h  synth.cpp
components/fluidsynth/src/: fluidsynth.c
components/fluidsynth/src/drivers/: fluid_adriver.c  fluid_adriver.h
components/fluidsynth/src/gentables/: make_tables.c
components/fluidsynth/src/rvoice/: fluid_chorus.c
components/fluidsynth/src/synth/: fluid_synth.c
components/fluidsynth/src/utils/: fluid_sys.c  fluidsynth_priv.h
components/hxcmod/: CMakeLists.txt  hxcmod.c
components/kazlib/: CMakeLists.txt  ChangeLog  component.mk  dict.c  dict.h  except.c  except.h  hash.c  hash.h  list.c  list.h  sfx.c  sfx.h
components/lvgl/: CMakeLists.txt  component.mk  lv_conf.h
components/stubs/: esp_log.c  esp_log.h  esp_system.c  esp_system.h  ysw_task.h
components/ysw_a2dp/: bt_app_core.c  bt_app_core.h  ysw_a2dp_driver.c  ysw_a2dp_source.c
components/ysw_accidental/: ysw_accidental.c
components/ysw_alsa/: ysw_alsa.c
components/ysw_array/: CMakeLists.txt  ysw_array.c
components/ysw_auto_play/: ysw_auto_play.c
components/ysw_bounds/: ysw_bounds.c
components/ysw_bt_synth/: CMakeLists.txt  ysw_bt_synth.cpp
components/ysw_bus/: CMakeLists.txt  ysw_bus.c
components/ysw_clip/: ysw_clip.c
components/ysw_common/: CMakeLists.txt  ysw_common.c
components/ysw_cpe/: ysw_cpe.c
components/ysw_cpf/: ysw_cpf.c
components/ysw_csc/: ysw_csc.c
components/ysw_cse/: ysw_cse.c
components/ysw_csf/: ysw_csf.c
components/ysw_csl/: ysw_csl.c
components/ysw_csp/: ysw_csp.c
components/ysw_cste/: ysw_cste.c
components/ysw_csv/: CMakeLists.txt  ysw_csv.c
components/ysw_db/: ysw_db.c
components/ysw_display/: ysw_display.c
components/ysw_edit_pane/: CMakeLists.txt  ysw_edit_pane.c
components/ysw_editor/: CMakeLists.txt  ysw_chooser.c  ysw_editor.c  ysw_field.c  ysw_footer.c  ysw_header.c  ysw_menu.c  ysw_msgbox.c  ysw_performer.c  ysw_popup.c
components/ysw_editor/include/: ysw_chooser.h  ysw_editor.h  ysw_field.h  ysw_footer.h  ysw_header.h  ysw_menu.h  ysw_msgbox.h  ysw_performer.h  ysw_popup.h
components/ysw_event/: CMakeLists.txt  ysw_event.c
components/ysw_fluid_synth/: CMakeLists.txt  ysw_fluid_synth.c
components/ysw_frame/: ysw_frame.c
components/ysw_glib/: CMakeLists.txt  glib.c  ysw_glib.c  ysw_pthread.c
components/ysw_gsc/: ysw_gsc.c
components/ysw_heap/: CMakeLists.txt  ysw_heap.c
components/ysw_hpc/: ysw_hpc.c
components/ysw_hpe/: ysw_hpe.c
components/ysw_hpl/: ysw_hpl.c
components/ysw_hpp/: ysw_hpp.c
components/ysw_i2c/: CMakeLists.txt  ysw_i2c.c
components/ysw_i2s/: CMakeLists.txt  ysw_i2s.c  ysw_i2s_driver.c
components/ysw_input/: ysw_input.c
components/ysw_ir/: ysw_ir.c
components/ysw_keyboard/: CMakeLists.txt  ysw_keyboard.c
components/ysw_keystate/: CMakeLists.txt  ysw_keystate.c
components/ysw_led/: CMakeLists.txt  ws2812.c  ws2812.h  ysw_led.c
components/ysw_linux/: esp_attr.h  esp_log.c  esp_log.h  esp_system.c  esp_system.h  main.c  ysw_lvgl.c  ysw_lvgl.h  ysw_simulator.c  ysw_simulator.h  ysw_system.c  ysw_system.h  ysw_task.c  ysw_task.h
components/ysw_lv_cpe/: ysw_lv_cpe.c
components/ysw_lv_cse/: ysw_lv_cse.c
components/ysw_lv_hpe/: ysw_lv_hpe.c
components/ysw_lv_styles/: ysw_lv_styles.c
components/ysw_main/: CMakeLists.txt  component.mk  extractor.c  ysw_main.c  ysw_main_esp32.c  ysw_main_linux.c  ysw_mmv01.c  ysw_mmv02.c  ysw_mmv04.c  ysw_mmv05.c  ysw_mmv06.c
components/ysw_main_bus/: ysw_main_bus.c
components/ysw_main_seq/: ysw_main_seq.c
components/ysw_main_synth/: ysw_main_synth.c
components/ysw_mapper/: CMakeLists.txt  ysw_mapper.c
components/ysw_mb/: ysw_mb.c
components/ysw_menu/: CMakeLists.txt  ysw_menu.c
components/ysw_message/: CMakeLists.txt  ysw_message.c
components/ysw_mf/: ysw_mfr.c  ysw_mfw.c
components/ysw_midi/: CMakeLists.txt  ysw_midi.c
components/ysw_mod_synth/: CMakeLists.txt  ysw_mod_music.c  ysw_mod_synth.c
components/ysw_mpr121/: CMakeLists.txt  ysw_mpr121.c
components/ysw_music/: ysw_chord.c  ysw_cn.c  ysw_cp.c  ysw_cs.c  ysw_csn.c  ysw_degree.c  ysw_division.c  ysw_hp.c  ysw_instruments.c  ysw_mode.c  ysw_music.c  ysw_music_parser.c  ysw_octave.c  ysw_octaves.c  ysw_progression.c  ysw_quatone.c  ysw_sn.c  ysw_tempo.c  ysw_time.c  ysw_transposition.c
components/ysw_name/: CMakeLists.txt  ysw_name.c
components/ysw_nsc/: ysw_nsc.c
components/ysw_pool/: CMakeLists.txt  ysw_pool.c
components/ysw_remote/: CMakeLists.txt  ysw_remote.c
components/ysw_sdb/: ysw_sdb.c
components/ysw_seq/: ysw_seq.c
components/ysw_sequencer/: CMakeLists.txt  ysw_sequencer.c
components/ysw_shell/: CMakeLists.txt  ysw_app.c  ysw_chooser.c  ysw_popup.c  ysw_shell.c
components/ysw_shell/include/: ysw_app.h  ysw_chooser.h  ysw_popup.h  ysw_shell.h
components/ysw_song/: ysw_song.c
components/ysw_spiffs/: CMakeLists.txt  ysw_spiffs.c
doc/: ap12.txt  corion.txt  mod-form.txt  mod-spec.txt
main/: chord_style.c  component.mk  cpc.c  cpc.h  csc.c  csc.h  display.c  display.h  gsc.c  gsc.h  hpc.c  hpc.h  main.c  seq.c  seq.h  sequencer.c  sequencer.h  spiffs.c  spiffs.h  synthesizer.c  synthesizer.h  ysw_bounds.c  ysw_csc.c  ysw_csc.h  ysw_csef.c  ysw_csef.h  ysw_csf.c  ysw_csf.h  ysw_lv_cne.c  ysw_lv_cne.h  ysw_lv_cse.c  ysw_lv_cse.h  ysw_lv_styles.c  ysw_lv_styles.h  ysw_main_display.c  ysw_main_synthesizer.c  ysw_main_synthesizer.h  ysw_modes.c  ysw_music_parser.c  ysw_music_parser.h  (+8 more)
spiffs/: music.csv  player.csv  zm_music.csv
(+200 files in other folders)
