idf_component_register(SRCS 
                          ./ac101.c
                          ./adapter.c
                          ./audio_hal.c
                          ./board.c
                          ./board_pins_config.c
                       INCLUDE_DIRS
                          include
                       REQUIRES 
                       PRIV_REQUIRES )

