idf_component_register(SRCS 
                          ./bt_app_core.c
                          ./ysw_a2dp_driver.c
                          ./ysw_a2dp_source.c
                       INCLUDE_DIRS
                          include
                       REQUIRES 
                       PRIV_REQUIRES )

