idf_component_register(SRCS 
                          src/bindings/fluid_cmd.c
                          src/bindings/fluid_filerenderer.c
                          src/bindings/fluid_ladspa.c
                          src/bindings/fluid_lash.c
                          src/bindings/fluid_rtkit.c
                          src/drivers/fluid_adriver.c
                          src/drivers/fluid_alsa.c
                          src/drivers/fluid_aufile.c
                          src/drivers/fluid_coreaudio.c
                          src/drivers/fluid_coremidi.c
                          src/drivers/fluid_dart.c
                          src/drivers/fluid_dsound.c
                          src/drivers/fluid_jack.c
                          src/drivers/fluid_mdriver.c
                          src/drivers/fluid_midishare.c
                          src/drivers/fluid_oboe.cpp
                          src/drivers/fluid_opensles.c
                          src/drivers/fluid_oss.c
                          src/drivers/fluid_portaudio.c
                          src/drivers/fluid_pulse.c
                          src/drivers/fluid_sdl2.c
                          src/drivers/fluid_sndmgr.c
                          src/drivers/fluid_waveout.c
                          src/drivers/fluid_winmidi.c
                          src/fluidsynth.c
                          src/midi/fluid_midi.c
                          src/midi/fluid_midi_router.c
                          src/midi/fluid_seq.c
                          src/midi/fluid_seq_queue.cpp
                          src/midi/fluid_seqbind.c
                          src/midi/fluid_seqbind_notes.cpp
                          src/rvoice/fluid_adsr_env.c
                          src/rvoice/fluid_chorus.c
                          src/rvoice/fluid_iir_filter.c
                          src/rvoice/fluid_lfo.c
                          src/rvoice/fluid_rev.c
                          src/rvoice/fluid_rvoice.c
                          src/rvoice/fluid_rvoice_dsp.c
                          src/rvoice/fluid_rvoice_event.c
                          src/rvoice/fluid_rvoice_mixer.c
                          src/sfloader/fluid_defsfont.c
                          src/sfloader/fluid_samplecache.c
                          src/sfloader/fluid_sffile.c
                          src/sfloader/fluid_sfont.c
                          src/synth/fluid_chan.c
                          src/synth/fluid_event.c
                          src/synth/fluid_gen.c
                          src/synth/fluid_mod.c
                          src/synth/fluid_synth.c
                          src/synth/fluid_synth_monopoly.c
                          src/synth/fluid_tuning.c
                          src/synth/fluid_voice.c
                          src/utils/fluid_conv.c
                          src/utils/fluid_hash.c
                          src/utils/fluid_list.c
                          src/utils/fluid_ringbuffer.c
                          src/utils/fluid_settings.c
                          src/utils/fluid_sys.c
                       INCLUDE_DIRS
                          .
                          include
                          src
                          src/bindings
                          src/drivers
                          src/midi
                          src/rvoice
                          src/sfloader
                          src/synth
                          src/utils
                       REQUIRES 
                          ysw_glib
                          ysw_i2s
                       PRIV_REQUIRES )

target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unknown-pragmas -Wno-error=pointer-sign -DI2S_SUPPORT)
